--- a/assets/server/public/login.html
+++ b/assets/server/public/login.html
@@ -16,15 +16,18 @@
 	html,body{
 		background:url('http://www.goodwp.com/images/201504/goodwp.com_32366.jpg');
 	}
+	.row{
+		    margin-top: 50px;
+	}
 	.login{
-		position:absolute;
+		position:relative;
 		top:20%;
-		left:35%;
-		background:white;
+		background:;
 		width:500px;
 		height:400px;
+		margin:0 auto;
 		text-align:center;
-		opacity:0.5;
+		opacity:0.9;
 		
 	}
 	.logo{
@@ -48,21 +51,25 @@
 <body>
  <div>
     <div class="row">
- 	<div class="login">
+ 	<div  class="login">
  		<div class="col s4"></div>
  			<div class="logo col s4">PS</div>
  			<div class=" col s4"></div>
     <form class="col s12">
       <div class="row">
         <div class="input-field col s12">
-          <i class="material-icons prefix">account_circle</i>
-          <input id="icon_prefix" type="text" class="validate">
-          <label for="icon_prefix">Username</label>
+          <i   style="left: 20px;" class="material-icons prefix white-text">account_circle</i>
+          <br />
+          <input id="icon_prefix" type="text" class="validate white">
+          
+          <label  style="font-size:24px;" for="icon_prefix" class="white-text">Username</label>
+          <br />
+          <br />
         </div>
       <div class="row">
         <div class="input-field col s12">
-        <i class="material-icons prefix">lock_outline</i>
-          <input id="password" type="password" class="validate">
+        <i class="material-icons prefix white-text">lock_outline</i>
+          <input id="password" type="password" class="validate white">
           <label for="password">Password</label>
         </div>
         </div>
